A whole bunch of changes, plug-in runs and detects input, but does not calculate RMS properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ juce_add_plugin("${TARGET_NAME}"
     # ICON_SMALL ...
     COMPANY_NAME MagnusHodne
     # IS_SYNTH TRUE/FALSE                       # Is this a synth or an effect?
-    # NEEDS_MIDI_INPUT TRUE/FALSE               # Does the plugin need midi input?
+    NEEDS_MIDI_INPUT TRUE               # Does the plugin need midi input?
     # NEEDS_MIDI_OUTPUT TRUE/FALSE              # Does the plugin need midi output?
     IS_MIDI_EFFECT TRUE                         # Is this plugin a MIDI effect?
     # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE    # Does the editor need keyboard focus?
@@ -44,11 +44,12 @@ target_compile_features("${TARGET_NAME}" PRIVATE cxx_std_20)
 
 # Manually list all .h and .cpp files for the plugin, don't use globs:
 set(SourceFiles
-        Source/MidiMeter.h
+    Source/Component/MidiMeter.h
     Source/VibratoDetector.h
+    Source/Utility/Fifo.h
     Source/PluginEditor.h
-    Source/PluginProcessor.h
     Source/PluginEditor.cpp
+    Source/PluginProcessor.h
     Source/PluginProcessor.cpp)
 
 target_sources("${TARGET_NAME}" PRIVATE ${SourceFiles})
