Feature rate detection (#1)
* Set up remaining GUI parameters and laid out positions

* Added Reaper test project to git

* Updated JUCE version

* Generalised underlying data structure of buffer, removed broken tests

* Renamed Fifo.h to VibratoBuffer.h

* Functioning rate average calculation

* Added send event for rate signal

* Added rate scaling & slider for it

* Changed default rate CC and default amp scaling

* Made rate test more robust

* Created func for calculating blocks per second

* Created test checking that we can detect 1Hz vibrato

* Removed rateScaling

* Changed default amp scaling to 1.f

* Renamed getRate to getAvgNumCrossings()

* Added Reaper project backup file to gitignore

* Created sine generator for midi data

* Updated JUCE and reaper project

* Optimized sine wave generation, added it to CMakeLists.txt

* Moved MSG to Utility namespace

* Added SineGenerator to VibratoDetector (remove later!)

* Revert "Added SineGenerator to VibratoDetector (remove later!)"

This reverts commit e217c4d6612d59f30bd067228c754aca992b7d5e.

* Created simple test for SineGenerator

* Improved rate algorithm (still not nearly accurate enough)

* Removed broken test, made avgNumCrossings private, created method for calculating num crossings

* Made rate test data driven (using multiple input values for same test)

* Removed unused function in VibratoDetector

* Documentation

* Changed default number of buffers to hold

* Added JS LFO to reaper project

* Rate algorithm is accurate to 0.2Hz

* Added more variable params to rate test

* Refactored VibratoBuffer rate detection

* Optimized getAverage and getSum methods by doing sum calculation on push

* Simplified sum calculation even further

* Changed generator of FifoTest

* Created vibrato data from ring

* Copy plug-in after build (remember to run CLion as admin...)

* Added some comments to PluginProcessor.cpp

* Setting in

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -15,16 +15,17 @@ set_target_properties(Catch2 PROPERTIES FOLDER Catch2)
 set_target_properties(Catch2WithMain PROPERTIES FOLDER Catch2)
 
 set(UnitTests
-        FifoTest.cpp)
+        MidiRingBufferTest.cpp
+        SineWaveGeneratorTest.cpp
+        )
 
 # A list of all the files that we need for our unit tests. Unless you write tests for every single class
 # used in the application, it is probably better to just include the files we actually need
 set(TestedFiles
-        ../Source/Utility/Fifo.h
-        ../Source/PluginEditor.cpp
-        ../Source/PluginEditor.h
-        ../Source/PluginProcessor.h
-        ../Source/PluginProcessor.cpp)
+        ../Source/VibratoDetector.h
+        ../Source/Utility/MidiSineGenerator.h
+        ../Source/Utility/MidiRingBuffer.h
+        ../Source/Utility/VibratoBuffer.h)
 
 juce_add_console_app(MyPluginTests
         PRODUCT_NAME "MyPlugin Unit Tests")
