Extract midi clamping function to utility library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ set(SourceFiles
     Source/VibratoDetector.cpp
     Source/Utility/MidiSineGenerator.h
     Source/Utility/MidiSineGenerator.cpp
+    Source/Utility/MidiUtils.h
+    Source/Utility/MidiUtils.cpp
     Source/PluginEditor.h
     Source/PluginEditor.cpp
     Source/PluginProcessor.h
